# sparrow

./: .gitignore  .gitmodules  CONTROLE_TEMPO.md  Cargo.toml  README.md  SEPARACAO_MINIMA.md  live_solution_visualizer.html  live_viewer.html  run_with_visualizer.sh
.github/workflows/: 7950x_benchmarks.yml  bench_extra_instances.yml  extra_bench.yml  main_bench.yml  nightly_bench.yml  nightly_benchmarks.yml  real_benchmarks.yml  rust_ci.yml  sequential_bench.yml  single_bench.yml
assets/: live_solution_visualizer.html  run_with_visualizer.sh
assets/experiments/: README.md
data/experiments/: README.md
data/input/: shirts.json  swim_cr.json
data/live/: live_viewer.html
gls_strip_packing/: Cargo.toml
gls_strip_packing/src/: benchmark.rs  lib.rs  main.rs  nightly_benchmark.rs  test_playground.rs
gls_strip_packing/src/io/: layout_to_svg.rs  mod.rs  svg_util.rs
gls_strip_packing/src/opt/: broad_optimizer.rs  constr_builder.rs  gls_optimizer.rs  gls_orchestrator.rs  mod.rs  search.rs  tabu.rs
gls_strip_packing/src/overlap/: matrix.rs  mod.rs  overlap.rs  overlap_proxy.rs  overlap_tracker.rs  overlap_tracker_original.rs
gls_strip_packing/src/playgrounds/: playground_overlap_visualizer.rs
gls_strip_packing/src/sampl/: best_samples.rs  coord_descent.rs  evaluator.rs  hpg_biased_sampler.rs  hpg_sampler.rs  mod.rs  search.rs  uniform_sampler.rs
gls_strip_packing/src/sampl/eval/: ch_corner_evaluator.rs  ch_edge_evaluator.rs  mod.rs  overlapping_evaluator.rs
gls_strip_packing/src/sample/: best_samples.rs  coord_descent.rs  hpg_biased_sampler.rs  hpg_sampler.rs  search.rs
gls_strip_packing/src/sample/eval/: hpg_eval.rs  mod.rs  overlapping_evaluator.rs
src/: bench.rs  benchmark.rs  config.rs  consts.rs  lib.rs  main.rs  nightly_benchmark.rs  test_playground.rs
src/eval/: custom_cde.rs  lbf_eval.rs  lbf_evaluator.rs  mod.rs  sample_eval.rs  sep_evaluator.rs  separation_eval.rs  separation_eval2.rs  specialized_jaguars_pipeline.rs
src/io/: layout_to_svg.rs  mod.rs
src/opt/: constr_builder.rs  gls_optimizer.rs  gls_orchestrator.rs  gls_worker.rs  mod.rs  post_optimizer.rs  tabu.rs
src/optimize/: lbf.rs  mod.rs  separator.rs  separator_worker.rs
src/optimizer/: builder.rs  compress.rs  explore.rs  lbf.rs  mod.rs  separator.rs  separator_worker.rs  terminator.rs  worker.rs
src/overlap/: mod.rs  overlap.rs  overlap_proxy.rs  overlap_tracker.rs  overlap_tracker_original.rs  pair_matrix.rs  proxy.rs  tracker.rs
src/overlap/simd/: circles_soa.rs  mod.rs  proxy_simd.rs
src/playgrounds/: playground_overlap_visualizer.rs
src/quantify/: mod.rs  overlap_proxy.rs  pair_matrix.rs  tracker.rs
src/quantify/simd/: circles_soa.rs  mod.rs  overlap_proxy_simd.rs
src/sample/: best_samples.rs  coord_descent.rs  hpg_biased_sampler.rs  hpg_sampler.rs  mod.rs  multi_search.rs  search.rs  uniform_sampler.rs
src/sample/eval/: constructive_evaluator.rs  hpg_eval.rs  mod.rs  overlapping_evaluator.rs
src/util/: assertions.rs  ctrlc_terminator.rs  io.rs  mod.rs  svg_exporter.rs  terminator.rs
src/util/io/: cli.rs  json_export.rs  layout_to_svg.rs  mod.rs  svg_export.rs  svg_util.rs
src/util/playgrounds/: playground_overlap_visualizer.rs  playground_paper.rs
tests/: tests.rs
