[package]
name = "sparrow"
version = "0.1.0"
edition = "2024"
default-run = "sparrow"
description = "State-of-the-art nesting heuristic for 2D irregular strip packing problems"

[features]
live_svg = []
only_final_svg = []
simd = []

[[bin]]
name = "sparrow"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
jagua-rs = { git = "https://github.com/JeroenGar/jagua-rs.git", rev = "acad15611349bd9ec2cc8cc645db3ca73764afcf" }
#jagua-rs = { path = "../jagua-rs/jagua-rs" }
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
svg = "0.18"
itertools = "0.14"
log = { version = "0.4", features = ["release_max_level_info"] }
fern = "0.7"
serde = "1.0"
serde_json = "1.0"
once_cell = "1.20"
tap = "1.0.1"
slotmap = "1.0"
float-cmp = "0.10.0"
ordered-float = "5.0.0"
rayon = "1.10.0"
numfmt = "1.1.1"
num_cpus = "1.16.0"
ctrlc = "3.4"
jiff = "0.2"
test-case = "3.3"
clap = { version = "4.5", features = ["derive"] }

[profile.dev]
overflow-checks = true

[profile.debug-release]
inherits = "release"
debug-assertions = true
debug = true

[profile.release]
opt-level = 3
lto = "fat"

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true