[package]
name = "sparrow"
version = "0.1.0"
edition = "2024"
default-run = "sparrow"
description = "State-of-the-art nesting heuristic for 2D irregular strip packing problems"

[[bin]]
name = "sparrow"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
jagua-rs = { features = ["spp"], git = "https://github.com/JeroenGar/jagua-rs.git", rev = "6e47329e4fd8dfe014428bd9045db132d26d35c9", default-features = false }
#jagua-rs = { features = ["spp"], path = "../jagua-rs/jagua-rs" }
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
svg = "0.18"
itertools = "0.14"
log = { version = "0.4", features = ["release_max_level_info"] }
fern = "0.7"
serde = "1.0"
serde_json = "1.0"
tap = "1.0.1"
slotmap = "1.0"
float-cmp = "0.10.0"
ordered-float = "5.0.0"
rayon = "1.10.0"
numfmt = "1.1.1"
num_cpus = "1.16.0"
ctrlc = "3.4"
jiff = "0.2"
test-case = "3.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"


[features]
live_svg = []
only_final_svg = []
simd = []

[profile.dev]
overflow-checks = true

[profile.debug-release]
inherits = "release"
debug-assertions = true
debug = true

[profile.release]
opt-level = 3
lto = "fat"

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true