[package]
name = "gls_strip_packing"
version = "0.1.0"
edition = "2021"

[dependencies]
jagua-rs = { path = "../jagua-rs/jagua-rs" , version = "0.2.0", features = ["double-precision"]}
rand = { version = "0.8", features = [ "small_rng" ] }
svg = "0.18.0"
itertools = "0.13.0"
log = { version = "0.4", features = ["release_max_level_info"] }
fern = "0.7.0"
serde = "1.0"
serde_json = "1.0"
mimalloc = "0.1"
once_cell = "1.20.2"
humantime = "2.1.0"
tap = "1.0.1"
slotmap = "1.0"
float-cmp = "0.10.0"
ordered-float = "4.5.0"


[profile.release]
