[package]
name = "gls_strip_packing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test_playground"
path = "src/test_playground.rs"

[dependencies]
jagua-rs = { path = "../jagua-rs/jagua-rs" , version = "0.2.0", features = ["double-precision"]}
rand = { version = "0.8", features = [ "small_rng" ] }
svg = "0.18.0"
itertools = "0.14.0"
log = { version = "0.4", features = ["release_max_level_debug"] }
fern = "0.7"
serde = "1.0"
serde_json = "1.0"
mimalloc = "0.1"
once_cell = "1.20.2"
humantime = "2.1.0"
tap = "1.0.1"
slotmap = "1.0"
float-cmp = "0.10.0"
ordered-float = "4.6.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
delaunator = "1.0.2"

[profile.release]
